--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,87 +1,82 @@
-name: Build Sync Remote Control Suite
+name: Build Sync Remote Control Suite (Windows Only)
 
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]  # 版本标签触发正式发布
+    tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: windows-latest  # 只保留 Windows 环境
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        # 移除多系统矩阵，只保留 Windows 配置
+        os: [windows-latest]
         include:
-          - os: ubuntu-latest
-            artifact-suffix: linux
           - os: windows-latest
             artifact-suffix: windows
-          - os: macos-latest
-            artifact-suffix: macos
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0  # 获取完整历史用于版本号生成
+      # 以下步骤保持不变，与原配置一致
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-        cache: 'pip'  # 缓存依赖加速构建
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'pip'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pyinstaller setuptools wheel
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pyinstaller setuptools wheel
 
-    - name: Lint and test
-      run: |
-        pip install flake8 pytest
-        flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        pytest tests/ -v
+      - name: Lint and test
+        run: |
+          pip install flake8 pytest
+          flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+          pytest tests/ -v
 
-    - name: Get version
-      id: get_version
-      run: |
-        if [[ $GITHUB_REF == refs/tags/v* ]]; then
-          echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
-        else
-          echo "VERSION=dev-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
-        fi
+      - name: Get version
+        id: get_version
+        run: |
+          if ($env:GITHUB_REF -like 'refs/tags/v*') {
+            $version = $env:GITHUB_REF -replace 'refs/tags/v', ''
+          } else {
+            $version = "dev-$(git rev-parse --short HEAD)"
+          }
+          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
-    - name: Build executable with PyInstaller
-      run: |
-        # 构建主控端
-        pyinstaller --onefile --name=sync-remote-master \
-          --add-data "src/resources/*:resources" \
-          --icon=src/resources/icons/master_icon.ico \
-          src/master.py
-        
-        # 构建被控端
-        pyinstaller --onefile --name=sync-remote-slave \
-          --add-data "src/resources/*:resources" \
-          --icon=src/resources/icons/slave_icon.ico \
-          src/slave.py
+      - name: Build executable with PyInstaller
+        run: |
+          # 构建主控端
+          pyinstaller --onefile --name=sync-remote-master `
+            --add-data "src/resources/*;resources" `  # Windows 用分号分隔路径
+            --icon=src/resources/icons/master_icon.ico `
+            src/master.py
+          
+          # 构建被控端
+          pyinstaller --onefile --name=sync-remote-slave `
+            --add-data "src/resources/*;resources" `  # Windows 用分号分隔路径
+            --icon=src/resources/icons/slave_icon.ico `
+            src/slave.py
 
-    - name: Package portable version
-      run: |
-        if [ "${{ matrix.os }}" = "windows-latest" ]; then
-          7z a -tzip sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
-        else
-          zip -r sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
-        fi
+      - name: Package portable version
+        run: |
+          7z a -tzip sync-remote-suite-${{ env.VERSION }}-windows.zip dist/*
 
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v4
-      with:
-        name: sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}
-        path: |
-          sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip
-          dist/
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4  # 使用最新版本
+        with:
+          name: sync-remote-suite-${{ env.VERSION }}-windows
+          path: |
+            sync-remote-suite-${{ env.VERSION }}-windows.zip
+            dist/
 
   release:
     needs: build
@@ -89,7 +84,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v4  # 使用最新版本
         with:
           path: artifacts
 
