--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Lint and test
         run: |
           pip install flake8 pytest
+          echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
           flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
           pytest tests/ -v
 
