--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,9 +39,14 @@ jobs:
       - name: Lint and test
         run: |
           pip install flake8 pytest
-          echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+          if ($env:OS -eq "Windows_NT") {
+            echo "PYTHONPATH=$($env:PYTHONPATH);$(Get-Location)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
+          } else {
+            echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
+          }
           flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
           pytest tests/ -v
+        shell: pwsh
 
       - name: Get version
         id: get_version
