--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,88 +1,104 @@
-name: Build Sync Remote Control Suite (Windows Only)
+name: Build Sync Remote Control Suite
 
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]
+    tags: [ 'v*' ]  # 版本标签触发正式发布
   pull_request:
     branches: [ main ]
 
 jobs:
   build:
-    runs-on: windows-latest  # 只保留 Windows 环境
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # 移除多系统矩阵，只保留 Windows 配置
-        os: [windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         include:
+          - os: ubuntu-latest
+            artifact-suffix: linux
           - os: windows-latest
             artifact-suffix: windows
+          - os: macos-latest
+            artifact-suffix: macos
 
     steps:
-      # 以下步骤保持不变，与原配置一致
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # 获取完整历史用于版本号生成
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-          cache: 'pip'
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        cache: 'pip'  # 缓存依赖加速构建
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pyinstaller setuptools wheel
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pyinstaller setuptools wheel
 
-      - name: Lint and test
-        run: |
-          pip install flake8 pytest
-          if ($env:OS -eq "Windows_NT") {
-            echo "PYTHONPATH=$($env:PYTHONPATH);$(Get-Location)" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
-          } else {
-            echo "PYTHONPATH=$PYTHONPATH:$(pwd)" >> $GITHUB_ENV
-          }
-          flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
-          pytest tests/ -v
-        shell: pwsh
+    - name: Lint and test
+      run: |
+        pip install flake8 pytest
+        
+        # 跨平台设置PYTHONPATH，解决模块导入问题
+        if ($IsWindows) {
+          # Windows系统：使用;作为路径分隔符，PowerShell语法
+          $currentDir = (Get-Location).Path
+          $env:PYTHONPATH = "$($env:PYTHONPATH);$currentDir"
+        } else {
+          # Linux/macOS系统：使用:作为路径分隔符，Bash语法
+          export PYTHONPATH="$PYTHONPATH:$(pwd)"
+        }
+        
+        flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        pytest tests/ -v
+      shell: pwsh  # 使用PowerShell确保跨平台脚本兼容性
 
-      - name: Get version
-        id: get_version
-        run: |
-          if ($env:GITHUB_REF -like 'refs/tags/v*') {
-            $version = $env:GITHUB_REF -replace 'refs/tags/v', ''
-          } else {
-            $version = "dev-$(git rev-parse --short HEAD)"
-          }
-          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+    - name: Get version
+      id: get_version
+      run: |
+        if ($env:GITHUB_REF -like "refs/tags/v*") {
+          $version = $env:GITHUB_REF -replace "refs/tags/v", ""
+          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
+        } else {
+          $commitHash = git rev-parse --short HEAD
+          echo "VERSION=dev-$commitHash" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
+        }
+      shell: pwsh
 
-      - name: Build executable with PyInstaller
-        run: |
-          # 构建主控端
-          pyinstaller --onefile --name=sync-remote-master `
-            --add-data "src/resources/*;resources" `  # Windows 用分号分隔路径
-            --icon=src/resources/icons/master_icon.ico `
-            src/master.py
-          
-          # 构建被控端
-          pyinstaller --onefile --name=sync-remote-slave `
-            --add-data "src/resources/*;resources" `  # Windows 用分号分隔路径
-            --icon=src/resources/icons/slave_icon.ico `
-            src/slave.py
+    - name: Build executable with PyInstaller
+      run: |
+        # 构建主控端
+        pyinstaller --onefile --name=sync-remote-master `
+          --add-data "src/resources/*;resources" `
+          --icon=src/resources/icons/master_icon.ico `
+          src/master.py
+        
+        # 构建被控端
+        pyinstaller --onefile --name=sync-remote-slave `
+          --add-data "src/resources/*;resources" `
+          --icon=src/resources/icons/slave_icon.ico `
+          src/slave.py
+      # Windows使用;作为路径分隔符，Linux/macOS会自动转换为:
 
-      - name: Package portable version
-        run: |
-          7z a -tzip sync-remote-suite-${{ env.VERSION }}-windows.zip dist/*
+    - name: Package portable version
+      run: |
+        if ($IsWindows) {
+          7z a -tzip sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
+        } else {
+          zip -r sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
+        }
+      shell: pwsh
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4  # 使用最新版本
-        with:
-          name: sync-remote-suite-${{ env.VERSION }}-windows
-          path: |
-            sync-remote-suite-${{ env.VERSION }}-windows.zip
-            dist/
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}
+        path: |
+          sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip
+          dist/
 
   release:
     needs: build
@@ -90,7 +106,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v4  # 使用最新版本
+        uses: actions/download-artifact@v3
         with:
           path: artifacts
 
