--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,60 +1,42 @@
-name: Build Sync Remote Control Suite
+name: Build Windows Sync Remote Control Suite
 
 on:
   push:
     branches: [ main ]
-    tags: [ 'v*' ]  # 版本标签触发正式发布
+    tags: [ 'v*' ]
   pull_request:
     branches: [ main ]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        include:
-          - os: ubuntu-latest
-            artifact-suffix: linux
-          - os: windows-latest
-            artifact-suffix: windows
-          - os: macos-latest
-            artifact-suffix: macos
-
+  build-windows:
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0  # 获取完整历史用于版本号生成
+        fetch-depth: 0
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-        cache: 'pip'  # 缓存依赖加速构建
+        cache: 'pip'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pyinstaller setuptools wheel
+        pip install pyinstaller setuptools wheel flake8 pytest
 
     - name: Lint and test
       run: |
-        pip install flake8 pytest
+        # 设置PYTHONPATH，解决src模块导入问题
+        $currentDir = (Get-Location).Path
+        $env:PYTHONPATH = "$($env:PYTHONPATH);$currentDir"
         
-        # 跨平台设置PYTHONPATH，解决模块导入问题
-        if ($IsWindows) {
-          # Windows系统：使用;作为路径分隔符，PowerShell语法
-          $currentDir = (Get-Location).Path
-          $env:PYTHONPATH = "$($env:PYTHONPATH);$currentDir"
-        } else {
-          # Linux/macOS系统：使用:作为路径分隔符，Bash语法
-          export PYTHONPATH="$PYTHONPATH:$(pwd)"
-        }
-        
+        # 执行代码检查和测试
         flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
         pytest tests/ -v
-      shell: pwsh  # 使用PowerShell确保跨平台脚本兼容性
+      shell: pwsh
 
     - name: Get version
       id: get_version
@@ -81,31 +63,27 @@ jobs:
           --add-data "src/resources/*;resources" `
           --icon=src/resources/icons/slave_icon.ico `
           src/slave.py
-      # Windows使用;作为路径分隔符，Linux/macOS会自动转换为:
+      shell: pwsh
 
     - name: Package portable version
       run: |
-        if ($IsWindows) {
-          7z a -tzip sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
-        } else {
-          zip -r sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
-        }
+        7z a -tzip sync-remote-suite-${{ env.VERSION }}-windows.zip dist/*
       shell: pwsh
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
-        name: sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}
+        name: sync-remote-suite-${{ env.VERSION }}-windows
         path: |
-          sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip
+          sync-remote-suite-${{ env.VERSION }}-windows.zip
           dist/
 
   release:
-    needs: build
+    needs: build-windows
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
-      - name: Download all artifacts
+      - name: Download Windows artifacts
         uses: actions/download-artifact@v3
         with:
           path: artifacts
