--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Windows Sync Remote Control Suite
+name: Build Sync Remote Control Suite
 
 on:
   push:
@@ -8,8 +8,19 @@ on:
     branches: [ main ]
 
 jobs:
-  build-windows:
-    runs-on: windows-latest
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        include:
+          - os: ubuntu-latest
+            artifact-suffix: linux
+          - os: windows-latest
+            artifact-suffix: windows
+          - os: macos-latest
+            artifact-suffix: macos
+
     steps:
     - uses: actions/checkout@v3
       with:
@@ -25,66 +36,79 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pyinstaller setuptools wheel flake8 pytest
+        pip install pyinstaller setuptools wheel
 
     - name: Lint and test
       run: |
-        # 设置PYTHONPATH，解决src模块导入问题
-        $currentDir = (Get-Location).Path
-        $env:PYTHONPATH = "$($env:PYTHONPATH);$currentDir"
+        pip install flake8 pytest
         
-        # 执行代码检查和测试
+        # 跨平台设置PYTHONPATH，确保能导入src模块
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          set PYTHONPATH=%PYTHONPATH%;%CD%
+        else
+          export PYTHONPATH=$PYTHONPATH:$PWD
+        fi
+        
         flake8 src/ --count --select=E9,F63,F7,F82 --show-source --statistics
         pytest tests/ -v
-      shell: pwsh
+      shell: bash
 
     - name: Get version
       id: get_version
       run: |
-        if ($env:GITHUB_REF -like "refs/tags/v*") {
-          $version = $env:GITHUB_REF -replace "refs/tags/v", ""
-          echo "VERSION=$version" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
-        } else {
-          $commitHash = git rev-parse --short HEAD
-          echo "VERSION=dev-$commitHash" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8
-        }
-      shell: pwsh
+        if [[ $GITHUB_REF == refs/tags/v* ]]; then
+          echo "VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
+        else
+          echo "VERSION=dev-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        fi
+      shell: bash
 
     - name: Build executable with PyInstaller
       run: |
+        # 根据操作系统设置add-data分隔符
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          data_sep=";"
+        else
+          data_sep=":"
+        fi
+        
         # 构建主控端
-        pyinstaller --onefile --name=sync-remote-master `
-          --add-data "src/resources/*;resources" `
-          --icon=src/resources/icons/master_icon.ico `
+        pyinstaller --onefile --name=sync-remote-master \
+          --add-data "src/resources/*$data_sep resources" \
+          --icon=src/resources/icons/master_icon.ico \
           src/master.py
         
         # 构建被控端
-        pyinstaller --onefile --name=sync-remote-slave `
-          --add-data "src/resources/*;resources" `
-          --icon=src/resources/icons/slave_icon.ico `
+        pyinstaller --onefile --name=sync-remote-slave \
+          --add-data "src/resources/*$data_sep resources" \
+          --icon=src/resources/icons/slave_icon.ico \
           src/slave.py
-      shell: pwsh
+      shell: bash
 
     - name: Package portable version
       run: |
-        7z a -tzip sync-remote-suite-${{ env.VERSION }}-windows.zip dist/*
-      shell: pwsh
+        if [ "$RUNNER_OS" == "Windows" ]; then
+          7z a -tzip sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
+        else
+          zip -r sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip dist/*
+        fi
+      shell: bash
 
     - name: Upload artifacts
-      uses: actions/upload-artifact@v4  # 升级到 v4 版本
+      uses: actions/upload-artifact@v3
       with:
-        name: sync-remote-suite-${{ env.VERSION }}-windows
+        name: sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}
         path: |
-          sync-remote-suite-${{ env.VERSION }}-windows.zip
+          sync-remote-suite-${{ env.VERSION }}-${{ matrix.artifact-suffix }}.zip
           dist/
 
   release:
-    needs: build-windows
+    needs: build
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
     steps:
-      - name: Download Windows artifacts
-        uses: actions/download-artifact@v4  # 升级到 v4 版本
+      - name: Download all artifacts
+        uses: actions/download-artifact@v3
         with:
           path: artifacts
 
